fixed an issue with birthdays not showing

--- a/stats/static/stats/css/player_stats.css
+++ b/stats/static/stats/css/player_stats.css
@@ -377,7 +377,7 @@ h2 {
 }
 
 #typewriter-search {
-    min-height: 40px; /
+    min-height: 40px; 
 }
 
 .typewriter-search::after {
