--- a/stats/static/stats/css/search.css
+++ b/stats/static/stats/css/search.css
@@ -330,6 +330,17 @@ input:focus {
     white-space: nowrap;    
 }
 
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @keyframes containerSlide {
     0% {
         opacity: 0;
